Fixed alignment of rehire employee modal

--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,12 @@ hr
   margin-top: -3.3em;
 }
 
+.searchresult-rehire-employee {
+  margin-top: unset !important;
+  margin-left: -56% !important;
+
+}
+
 /* Options page */
 .sitelist
 {
